@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Use split_like_shell instead of shellwords
 
 0.006     2024-06-17 18:52:59+02:00 Europe/Brussels
           - Fix ranking of libperl argument on Windows
